# expenses_api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: cost_bearer.rs  error_code.rs  expense_entry.rs  expense_type.rs  mod.rs  routes.rs
src/domain/: cost_bearer.rs  cost_share.rs  expense_entry.rs  expense_type.rs  mod.rs
src/repository/: mod.rs
src/repository/sqliterepository/: cost_bearer.rs  expense_entry.rs  expense_type.rs  mod.rs
src/service/: application_error.rs  cost_bearer.rs  expense_entry.rs  expense_type.rs  mod.rs  repository_error.rs
src/service/command/: cost_bearer.rs  expense_entry.rs  expense_type.rs  mod.rs
src/service/query/: cost_bearer.rs  expense_entry.rs  expense_type.rs  mod.rs
src/test_util/: mod.rs  test_utility.rs
src/util/: cost_share.rs  mod.rs
